--- a/source/css/layout.scss
+++ b/source/css/layout.scss
@@ -1,14 +1,17 @@
 .grid-col-10-12{
 	display: grid;
-	grid-template-columns: 10% repeat(12, 1fr) 10%;
-	
+	grid-template-columns: 5% repeat(12, 1fr) 5%;
+	grid-gap: 25px;	
 }
 .grid-col-16{
 	display: grid;
 	grid-template-columns: repeat(16, 1fr);
 	
 }
-.grid-rows-3{
-	grid-template-rows:   1.6fr 1fr 1.6fr;
+.grid-rows-2{
+	display: grid;
+	grid-template-rows:   80% 20%;
+	grid-row-gap: 0;
 }
+
 
