--- a/source/css/style.scss
+++ b/source/css/style.scss
@@ -54,9 +54,7 @@ header{
 		}
 		// margin-left: 3em;
 	}
-	.emblem-hust{
-		grid-column: 2/3;
-	}
+
 	
 		
 	.radio{
@@ -66,21 +64,22 @@ header{
 	}		
 }
 
-.emblem-hust, .emblem-oblrada{
+
+
+.slogan{
+	width: 100%;
+	height: 125px;
+	background: rgba(75,75,75, 0.8);
 	display:flex;
-	justify-content: start;
-	align-items:center;	
+	justify-content: center;
+	align-items: center;
 
-	img{
-		
-		margin:  0 1em;
-	}
-	p{
-		color:#fff;
+	h1{
 		font-family: roboto;
+		color:#fff;
 	}
+	margin-top: 130px;
 }
-
 // burger-menu
 .burg-wrap-start{
 	position:absolute;
@@ -129,22 +128,19 @@ header{
 	}
 }
 // end burger-menu
-.news{
-	height: 245px;
-}
 .news-image{
 	grid-column: 2/5;
-	grid-row: 1/3;
-	margin: 5vh 5vh 0 0;
-}
-.news-pre{
+	margin: 5vh 0 0 0;
 	overflow: hidden;
-	
-	grid-column: 5/12;
-	grid-row: 1/2;
-	
-	margin: 5vh 5vh 0 0;
-
+	height: 200px;
+}
+.news-pre-text-container{
+	grid-column: 5/11;
+	margin: 5vh 0 0 0;
+}
+.news-pre-text{
+	overflow: hidden;
+	height: 170px;
 	p, h2 {
 		font-family: roboto;
 	}
@@ -152,13 +148,130 @@ header{
 		margin-top: 1em;
 		line-height: 1.5em;
 		letter-spacing: 0.1em;
-
 	}
 }
 .news-next{
-	grid-column: 5/12;
-	grid-row: 2/3;
 	display:flex;
 	align-items: center;
+	height: 30px;
+	a{
+		text-decoration: none;
+		font-size: 2em;
+		color:#bbb;
+		transition: color 0.3s linear;
+	}
+	a:visited{
+		color:#aaa;
+	}
+	a:hover{
+		color:#599e5e;
+	}
+
+
 		
+}
+.right{
+	grid-column: 11/14;
+	grid-row: 1/6;
+	display:flex;
+	flex-direction: column;
+	align-items: flex-end; 
+	div{
+		margin-top:5vh;
+		input{
+			border:none;
+			border-bottom: #555 1px solid;
+			padding:0.2em;
+			font-family: roboto;
+
+		}
+	}
+
+}
+.pagination{
+	grid-column:2/10;
+	display:flex;
+	font-family: roboto;
+	div{
+		background:#f6f6f6;
+		padding: 0.5em 2em;
+		margin:2em 0.25em;
+		border-radius: 2px;
+	}
+	ul{
+		display: flex;
+		list-style-type: none;
+
+		li{
+			background:#f6f6f6;
+			padding: 0.5em 1em;
+			margin:2em 0.25em;
+			border-radius: 2px;
+		}
+		
+	}
+}
+footer{
+	font-family: roboto;
+	background:#f6f6f6;
+	padding:2em 0;
+
+}
+.emblem-hust, .emblem-oblrada{
+
+	grid-column: 2/3;
+	display:flex;
+	justify-content: start;
+	align-items:center;	
+	img{
+		
+		margin:  0 1em;
+	}
+	p{
+		color:#000;
+		font-family: roboto;
+	}
+}
+// .nav-footer-1{
+// 	grid-column:3/6;
+// }
+// .nav-footer-2{
+// 	grid-column:6/9;
+// }
+.nav-footer-1, .nav-footer-2{
+	ul{
+		margin-left:2em;
+		list-style-type: none;
+		li{
+			margin-bottom:0.5em;
+			
+			a{
+				color:#000;
+				text-decoration: none;
+				font-size: 0.8em;
+
+			}
+		}
+	}
+}
+.nav-footer-2{
+	ul{
+		margin-left:0;
+	}
+
+}
+.contacts{
+	grid-column: 11/14;
+
+	div{
+		display: flex;
+		align-items: center;
+		margin:1em 0;
+		span{
+			margin: 0 1em;
+			font-size: 1.25em;
+		}
+
+	}
+
 }
