--- a/www/css/style.css
+++ b/www/css/style.css
@@ -8,9 +8,9 @@
   display: grid;
   grid-template-columns: repeat(16, 1fr); }
 
-.grid-rows-2 {
+.grid-rows-5 {
   display: grid;
-  grid-template-rows: 80% 20%;
+  grid-template-rows: repeat(5, auto);
   grid-row-gap: 0; }
 
 @media screen and (max-width: 992px) {
@@ -67,8 +67,6 @@ header {
     justify-content: space-around; }
     .nav-desktop-container nav a {
       font-family: roboto; }
-  .nav-desktop-container .emblem-hust {
-    grid-column: 2/3; }
   .nav-desktop-container .radio {
     grid-column: 13/14;
     display: -webkit-box;
@@ -78,21 +76,23 @@ header {
     -ms-flex-align: center;
     align-items: center; }
 
-.emblem-hust, .emblem-oblrada {
+.slogan {
+  width: 100%;
+  height: 125px;
+  background: rgba(75, 75, 75, 0.8);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: start;
-  -ms-flex-pack: start;
-  justify-content: start;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   -webkit-box-align: center;
   -ms-flex-align: center;
-  align-items: center; }
-  .emblem-hust img, .emblem-oblrada img {
-    margin: 0 1em; }
-  .emblem-hust p, .emblem-oblrada p {
-    color: #fff;
-    font-family: roboto; }
+  align-items: center;
+  margin-top: 130px; }
+  .slogan h1 {
+    font-family: roboto;
+    color: #fff; }
 
 .burg-wrap-start {
   position: absolute;
@@ -132,32 +132,133 @@ header {
       text-align: center;
       padding: 1em 0; }
 
-.news {
-  height: 245px; }
-
 .news-image {
   grid-column: 2/5;
-  grid-row: 1/3;
-  margin: 5vh 5vh 0 0; }
-
-.news-pre {
+  margin: 5vh 0 0 0;
   overflow: hidden;
-  grid-column: 5/12;
-  grid-row: 1/2;
-  margin: 5vh 5vh 0 0; }
-  .news-pre p, .news-pre h2 {
+  height: 200px; }
+
+.news-pre-text-container {
+  grid-column: 5/11;
+  margin: 5vh 0 0 0; }
+
+.news-pre-text {
+  overflow: hidden;
+  height: 170px; }
+  .news-pre-text p, .news-pre-text h2 {
     font-family: roboto; }
-  .news-pre p {
+  .news-pre-text p {
     margin-top: 1em;
     line-height: 1.5em;
     letter-spacing: 0.1em; }
 
 .news-next {
-  grid-column: 5/12;
-  grid-row: 2/3;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
   -ms-flex-align: center;
+  align-items: center;
+  height: 30px; }
+  .news-next a {
+    text-decoration: none;
+    font-size: 2em;
+    color: #bbb;
+    -webkit-transition: color 0.3s linear;
+    transition: color 0.3s linear; }
+  .news-next a:visited {
+    color: #aaa; }
+  .news-next a:hover {
+    color: #599e5e; }
+
+.right {
+  grid-column: 11/14;
+  grid-row: 1/6;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-align: end;
+  -ms-flex-align: end;
+  align-items: flex-end; }
+  .right div {
+    margin-top: 5vh; }
+    .right div input {
+      border: none;
+      border-bottom: #555 1px solid;
+      padding: 0.2em;
+      font-family: roboto; }
+
+.pagination {
+  grid-column: 2/10;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  font-family: roboto; }
+  .pagination div {
+    background: #f6f6f6;
+    padding: 0.5em 2em;
+    margin: 2em 0.25em;
+    border-radius: 2px; }
+  .pagination ul {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    list-style-type: none; }
+    .pagination ul li {
+      background: #f6f6f6;
+      padding: 0.5em 1em;
+      margin: 2em 0.25em;
+      border-radius: 2px; }
+
+footer {
+  font-family: roboto;
+  background: #f6f6f6;
+  padding: 2em 0; }
+
+.emblem-hust, .emblem-oblrada {
+  grid-column: 2/3;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+  -ms-flex-pack: start;
+  justify-content: start;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center; }
+  .emblem-hust img, .emblem-oblrada img {
+    margin: 0 1em; }
+  .emblem-hust p, .emblem-oblrada p {
+    color: #000;
+    font-family: roboto; }
+
+.nav-footer-1 ul, .nav-footer-2 ul {
+  margin-left: 2em;
+  list-style-type: none; }
+  .nav-footer-1 ul li, .nav-footer-2 ul li {
+    margin-bottom: 0.5em; }
+    .nav-footer-1 ul li a, .nav-footer-2 ul li a {
+      color: #000;
+      text-decoration: none;
+      font-size: 0.8em; }
+
+.nav-footer-2 ul {
+  margin-left: 0; }
+
+.contacts {
+  grid-column: 11/14; }
+  .contacts div {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    margin: 1em 0; }
+    .contacts div span {
+      margin: 0 1em;
+      font-size: 1.25em; }
