--- a/source/css/layout.scss
+++ b/source/css/layout.scss
@@ -10,7 +10,7 @@
 }
 .grid-rows-5{
 	display: grid;
-	grid-template-rows:   repeat(5, auto);
+	grid-template-rows:   repeat(5, 1fr);
 	grid-row-gap: 0;
 }
 
