--- a/source/css/layout.scss
+++ b/source/css/layout.scss
@@ -8,6 +8,11 @@
 	grid-template-columns: repeat(16, 1fr);
 	
 }
+.grid-rows-2{
+	display: grid;
+	grid-template-rows:    1fr 10vh;
+	grid-row-gap: 0;
+}
 .grid-rows-5{
 	display: grid;
 	grid-template-rows:   repeat(5, 1fr);
