--- a/source/css/style.scss
+++ b/source/css/style.scss
@@ -13,99 +13,99 @@
 .hide{
 	display:none;
 }
-.top{
-	background:rgba(50,50,50,0.6);
-	height: 64px;
-}
-.emblems-top{
-
-	grid-column:5/11;
-	display: flex;
-	align-items:center;
-	justify-content:center;
-	img{
-		margin:0 0.5em;
-	}
-
-
-
-}
-.khust-img-small, .emblem-khust-old{
-	grid-column:2/3;
-	display: flex;
-	align-items:center;
-	justify-content:center;
-}
-.header-index{
+header{
 	background: url('../img/back-header.jpg');
 	background-size: 100% 100%;
-
-
+}
+.weather-informer{
+	grid-column:9/13;
+	grid-row:1/2;
+	display: flex;
+	align-items:center;
+	justify-content:center;
+}
+.wi-inner{
+	border: #fc8302 1px dashed;
+	padding: 0.5em 1.5em;
+}
+.emblem-khust{
+	grid-column:2/3;
+	grid-row:1/2;
+	flex-direction:column;
+	display: flex;
+	align-items:center;
+	justify-content:center;
+	margin:0.5em 0;
+	p{
+		margin:0.2em 0;
+		text-align: center;
+		font-family: roboto;
+		color:white;
+	}
 }
 .radio{
 	grid-column: 13/14;
+	grid-row:1/2;
 	display: flex;
+	flex-direction:column;
 	align-items:center;
-}
-.burg-menu{
-	grid-column: 11/12;
-	grid-rows: 1/2;
-	img {
-		margin-top:4em;
-	}
-	display:none;
-}
-.nav-desktop-container{
-	font-family: railwayBold;
-	background: rgba(0, 0, 0, 0.6);
-	height: 8vh;
 	justify-content:center;
-	ul{
-		li{
-			display: inline-block;
-			a{
-				padding: 0.25em 1em;
-				// text-decoration: none;
-				color: white;	
-				font-size: 1.2em;
-				transition: color 0.3s linear;
-			}
-			a:hover{
-				color:#2e52d3;
+	margin:0.5em 0;
+}
+#play-stop{
+	margin: 0.4em 0;
+}
+#play-stop:hover{
+	cursor: pointer;
+}
 
-			}
-		}	
-	}
 
-	nav{
-		grid-column: 3/13;
+
+nav{
+		grid-column: 1/15;
+		grid-row: 2/3;
 		display: flex;
 		align-items:center;
 		justify-content:space-around;
-		a{
-			font-family: roboto;
+		background: rgba(0, 0, 0, 0.6);
+
+	justify-content:center;
+	ul{
+
+		li{
+			display: inline-block;
+			border-left: #555 1px solid;
+			padding:0.75em 0;
+			margin:0 -2px;
+			transition: color 0.2s linear, background 0.2s linear;
+			a{
+				padding: 0.25em 1em;
+				color: white;	
+				font-size: 1.2em;
+			}
+			a:hover{
+				
+				
+			}
 		}
-		// margin-left: 3em;
+		li:nth-child(1){
+			border-left:none;
+		}
+
+		li:hover{
+			background:#999;
+			a{
+				color:#ddf;
+			}
+		}	
 	}
-
-	
-		
-		
-}
-.slogan{
-	width: 100%;
-	height: 125px;
-	background: rgba(75,75,75, 0.8);
-	display:flex;
-	justify-content: center;
-	align-items: center;
-
-	h1{
+	a{
 		font-family: roboto;
-		color:#fff;
 	}
-	margin-top: 130px;
+
 }
+	
+
 .breadcrumbs{
 	font-family: roboto;
 	grid-column: 4/12;
@@ -126,6 +126,14 @@
 	}
 }
 // burger-menu
+.burg-menu{
+	grid-column: 11/12;
+	grid-rows: 1/2;
+	img {
+		margin-top:4em;
+	}
+	display:none;
+}
 .burg-wrap-start{
 	position:absolute;
 	width: 0;
