--- a/www/css/style.css
+++ b/www/css/style.css
@@ -8,6 +8,11 @@
   display: grid;
   grid-template-columns: repeat(16, 1fr); }
 
+.grid-rows-2 {
+  display: grid;
+  grid-template-rows: 1fr 10vh;
+  grid-row-gap: 0; }
+
 .grid-rows-5 {
   display: grid;
   grid-template-rows: repeat(5, 1fr);
@@ -206,103 +211,108 @@ section {
 .hide {
   display: none; }
 
-.top {
-  background: rgba(50, 50, 50, 0.6);
-  height: 64px; }
-
-.emblems-top {
-  grid-column: 5/11;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center; }
-  .emblems-top img {
-    margin: 0 0.5em; }
-
-.khust-img-small, .emblem-khust-old {
-  grid-column: 2/3;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center; }
-
-.header-index {
+header {
   background: url("../img/back-header.jpg");
   background-size: 100% 100%; }
 
-.radio {
-  grid-column: 13/14;
+.weather-informer {
+  grid-column: 9/13;
+  grid-row: 1/2;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center; }
-
-.burg-menu {
-  grid-column: 11/12;
-  grid-rows: 1/2;
-  display: none; }
-  .burg-menu img {
-    margin-top: 4em; }
-
-.nav-desktop-container {
-  font-family: railwayBold;
-  background: rgba(0, 0, 0, 0.6);
-  height: 8vh;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center; }
-  .nav-desktop-container ul li {
-    display: inline-block; }
-    .nav-desktop-container ul li a {
-      padding: 0.25em 1em;
-      color: white;
-      font-size: 1.2em;
-      -webkit-transition: color 0.3s linear;
-      transition: color 0.3s linear; }
-    .nav-desktop-container ul li a:hover {
-      color: #2e52d3; }
-  .nav-desktop-container nav {
-    grid-column: 3/13;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    -ms-flex-pack: distribute;
-    justify-content: space-around; }
-    .nav-desktop-container nav a {
-      font-family: roboto; }
-
-.slogan {
-  width: 100%;
-  height: 125px;
-  background: rgba(75, 75, 75, 0.8);
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  margin-top: 130px; }
-  .slogan h1 {
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center; }
+
+.wi-inner {
+  border: #fc8302 1px dashed;
+  padding: 0.5em 1.5em; }
+
+.emblem-khust {
+  grid-column: 2/3;
+  grid-row: 1/2;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  margin: 0.5em 0; }
+  .emblem-khust p {
+    margin: 0.2em 0;
+    text-align: center;
     font-family: roboto;
-    color: #fff; }
+    color: white; }
+
+.radio {
+  grid-column: 13/14;
+  grid-row: 1/2;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  margin: 0.5em 0; }
+
+#play-stop {
+  margin: 0.4em 0; }
+
+#play-stop:hover {
+  cursor: pointer; }
+
+nav {
+  grid-column: 1/15;
+  grid-row: 2/3;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -ms-flex-pack: distribute;
+  justify-content: space-around;
+  background: rgba(0, 0, 0, 0.6);
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center; }
+  nav ul li {
+    display: inline-block;
+    border-left: #555 1px solid;
+    padding: 0.75em 0;
+    margin: 0 -2px;
+    -webkit-transition: color 0.2s linear, background 0.2s linear;
+    transition: color 0.2s linear, background 0.2s linear; }
+    nav ul li a {
+      padding: 0.25em 1em;
+      color: white;
+      font-size: 1.2em; }
+  nav ul li:nth-child(1) {
+    border-left: none; }
+  nav ul li:hover {
+    background: #999; }
+    nav ul li:hover a {
+      color: #ddf; }
+  nav a {
+    font-family: roboto; }
 
 .breadcrumbs {
   font-family: roboto;
@@ -324,6 +334,13 @@ section {
       .breadcrumbs ul li a {
         color: #333;
         font-size: 0.8em; }
+
+.burg-menu {
+  grid-column: 11/12;
+  grid-rows: 1/2;
+  display: none; }
+  .burg-menu img {
+    margin-top: 4em; }
 
 .burg-wrap-start {
   position: absolute;
