--- a/www/css/style.css
+++ b/www/css/style.css
@@ -230,7 +230,8 @@ header {
 
 .wi-inner {
   border: #fc8302 1px dashed;
-  padding: 0.5em 1.5em; }
+  padding: 0.5em 1.5em;
+  background: rgba(20, 20, 30, 0.2); }
 
 .emblem-khust {
   grid-column: 2/3;
@@ -290,7 +291,7 @@ nav {
   align-items: center;
   -ms-flex-pack: distribute;
   justify-content: space-around;
-  background: rgba(0, 0, 0, 0.6);
+  background: rgba(0, 0, 0, 0.5);
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center; }
@@ -308,9 +309,9 @@ nav {
   nav ul li:nth-child(1) {
     border-left: none; }
   nav ul li:hover {
-    background: #999; }
+    background: rgba(20, 20, 30, 0.8); }
     nav ul li:hover a {
-      color: #ddf; }
+      color: #aaf; }
   nav a {
     font-family: roboto; }
 
@@ -379,6 +380,20 @@ nav {
       color: #ddd;
       text-align: center;
       padding: 1em 0; }
+
+.event-container {
+  grid-column: 4/12;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-box-pack: space-evenly;
+  -ms-flex-pack: space-evenly;
+  justify-content: space-evenly; }
+
+.event {
+  width: 300px; }
 
 .news-image {
   grid-column: 2/5;
