--- a/www/css/style.css
+++ b/www/css/style.css
@@ -10,7 +10,7 @@
 
 .grid-rows-2 {
   display: grid;
-  grid-template-rows: 1fr 10vh;
+  grid-template-rows: 1fr 8vh;
   grid-row-gap: 0; }
 
 .grid-rows-5 {
@@ -249,7 +249,7 @@ header {
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center;
-  margin: 0.5em 0; }
+  margin: 1em 0; }
   .emblem-khust p {
     margin: 0.2em 0;
     text-align: center;
@@ -271,8 +271,7 @@ header {
   align-items: center;
   -webkit-box-pack: center;
   -ms-flex-pack: center;
-  justify-content: center;
-  margin: 0.5em 0; }
+  justify-content: center; }
 
 #play-stop {
   margin: 0.4em 0; }
@@ -291,7 +290,7 @@ nav {
   align-items: center;
   -ms-flex-pack: distribute;
   justify-content: space-around;
-  background: rgba(0, 0, 0, 0.5);
+  background: rgba(0, 0, 0, 0.4);
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center; }
@@ -300,12 +299,14 @@ nav {
     border-left: #555 1px solid;
     padding: 0.75em 0;
     margin: 0 -2px;
-    -webkit-transition: color 0.2s linear, background 0.2s linear;
-    transition: color 0.2s linear, background 0.2s linear; }
+    -webkit-transition: background 0.3s linear;
+    transition: background 0.3s linear; }
     nav ul li a {
       padding: 0.25em 1em;
       color: white;
-      font-size: 1.2em; }
+      font-size: 1.2em;
+      -webkit-transition: color 0.3s linear;
+      transition: color 0.3s linear; }
   nav ul li:nth-child(1) {
     border-left: none; }
   nav ul li:hover {
@@ -381,6 +382,15 @@ nav {
       text-align: center;
       padding: 1em 0; }
 
+.index-title {
+  grid-column: 4/12;
+  margin: 2em 0;
+  text-align: center; }
+  .index-title h1 {
+    font-weight: 100;
+    font-size: 2.5em;
+    color: #000; }
+
 .event-container {
   grid-column: 4/12;
   display: -webkit-box;
@@ -390,10 +400,22 @@ nav {
   flex-wrap: wrap;
   -webkit-box-pack: space-evenly;
   -ms-flex-pack: space-evenly;
-  justify-content: space-evenly; }
+  justify-content: space-evenly;
+  font-family: roboto; }
 
 .event {
   width: 300px; }
+  .event .date {
+    margin: 0.75em 0; }
+  .event h3 {
+    margin: 0.75em 0; }
+
+.left-container {
+  grid-column: 1/4;
+  grid-row: 1/6;
+  margin-top: 10em; }
+  .left-container .left {
+    margin: 0  0 0 2em; }
 
 .news-image {
   grid-column: 2/5;
