--- a/www/css/style.css
+++ b/www/css/style.css
@@ -383,9 +383,10 @@ nav {
       padding: 1em 0; }
 
 .index-title {
-  grid-column: 4/12;
+  grid-column: 1/15;
   margin: 2em 0;
-  text-align: center; }
+  text-align: center;
+  background: blue; }
   .index-title h1 {
     font-weight: 100;
     font-size: 2.5em;
@@ -412,8 +413,7 @@ nav {
 
 .left-container {
   grid-column: 1/4;
-  grid-row: 1/6;
-  margin-top: 10em; }
+  background: grey; }
   .left-container .left {
     margin: 0  0 0 2em; }
 
