--- a/www/css/style.css
+++ b/www/css/style.css
@@ -213,7 +213,8 @@ section {
 
 header {
   background: url("../img/back-header.jpg");
-  background-size: 100% 100%; }
+  background-size: 100% 100%;
+  position: fixed; }
 
 .weather-informer {
   grid-column: 9/13;
@@ -417,7 +418,7 @@ nav {
     margin: 0  0 0 2em; }
     .left-container .left p {
       margin: 2.5em 0;
-      font-size: 0.6em;
+      font-size: 0.6	em;
       line-height: 1.5em;
       letter-spacing: 0.075em; }
 
