--- a/source/css/style.scss
+++ b/source/css/style.scss
@@ -16,7 +16,7 @@
 header{
 	background: url('../img/back-header.jpg');
 	background-size: 100% 100%;
-	position:fixed;
+
 
 }
 
@@ -185,7 +185,7 @@ nav{
 // end burger-menu
 .index-title{
 	grid-column:1/15;
-	margin: 2em 0;
+	margin: 2em 0 0;
 	text-align: center;
 
 	h1{
@@ -199,10 +199,11 @@ nav{
 	display:flex;
 	flex-wrap:wrap;
 	justify-content:space-evenly; 
-	font-family: roboto;	
+	font-family: roboto;
 }
 .event{
 	width: 300px;
+	margin:2em 0 0;	
 	.date{
 		margin: 0.75em 0;
 	}
@@ -210,6 +211,26 @@ nav{
 		margin: 0.75em 0;
 
 	}
+
+}
+.event-title{
+	height: 4em;
+}
+.event-image-wrap{
+	width: 300px;
+	height: 170px;
+	position: relative;	
+
+}
+.event-image, .event-shadow{
+	width: 100%;
+	height: 100%;
+	position:absolute;
+	top:0;
+	left:0;
+}
+.event-shadow{
+	background:rgba(0,0,0,0.5);
 }
 
 .left-container{
@@ -226,11 +247,6 @@ nav{
 		}
 	}
 }
-
-
-
-
-
 .news-image{
 	grid-column: 2/5;
 	margin: 5vh 0 0 0;
