--- a/www/css/style.css
+++ b/www/css/style.css
@@ -213,8 +213,7 @@ section {
 
 header {
   background: url("../img/back-header.jpg");
-  background-size: 100% 100%;
-  position: fixed; }
+  background-size: 100% 100%; }
 
 .weather-informer {
   grid-column: 9/13;
@@ -385,7 +384,7 @@ nav {
 
 .index-title {
   grid-column: 1/15;
-  margin: 2em 0;
+  margin: 2em 0 0;
   text-align: center; }
   .index-title h1 {
     font-weight: 100;
@@ -405,11 +404,30 @@ nav {
   font-family: roboto; }
 
 .event {
-  width: 300px; }
+  width: 300px;
+  margin: 2em 0 0; }
   .event .date {
     margin: 0.75em 0; }
   .event h3 {
     margin: 0.75em 0; }
+
+.event-title {
+  height: 4em; }
+
+.event-image-wrap {
+  width: 300px;
+  height: 170px;
+  position: relative; }
+
+.event-image, .event-shadow {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0; }
+
+.event-shadow {
+  background: rgba(0, 0, 0, 0.5); }
 
 .left-container {
   grid-column: 1/4;
