--- a/source/css/style.scss
+++ b/source/css/style.scss
@@ -16,30 +16,16 @@
 header{
 	background: url('../img/back-header.jpg');
 	background-size: 100% 100%;
-
-
 }
 
-.weather-informer{
-	grid-column:9/13;
-	grid-row:1/2;
-	display: flex;
-	align-items:center;
-	justify-content:center;
 
-}
-.wi-inner{
-	border: #fc8302 1px dashed;
-	padding: 0.5em 1.5em;
-	background:rgba(20,20,30,0.2);
-}
 .emblem-khust{
-	grid-column:2/3;
+	grid-column:1/3;
 	grid-row:1/2;
 	flex-direction:column;
 	display: flex;
 	align-items:center;
-	justify-content:center;
+	justify-content:flex-start;
 	margin:1em 0;
 	p{
 		margin:0.2em 0;
@@ -48,16 +34,34 @@ header{
 		color:white;
 	}
 }
-.radio{
-	grid-column: 13/14;
+.header-right{
+	grid-column:10/15;
 	grid-row:1/2;
+	display: flex;
+	align-items:flex-start;
+	justify-content: flex-end;
+
+}
+.weather-informer{
+	margin:1em 0.5em;
+	
+}
+.wi-inner{
+	padding: 0.75em 2.5em;
+	background:rgba(20,20,30,0.2);
+}
+.radio{
 	display: flex;
 	flex-direction:column;
 	align-items:center;
 	justify-content:center;
+	margin:1em 1em 0 0.5em;
 }
 #play-stop{
-	margin: 0.4em 0;
+	// margin: 0.em 0;
+	img{
+		margin-top:0.75em;
+	}
 }
 #play-stop:hover{
 	cursor: pointer;
@@ -66,7 +70,7 @@ header{
 
 
 nav{
-		grid-column: 1/15;
+		grid-column: 2/14;
 		grid-row: 2/3;
 		display: flex;
 		align-items:center;
@@ -101,13 +105,31 @@ nav{
 		li:hover{
 			background:rgba(20,20,30,0.8);
 			a{
-				color:#aaf;
+				color:#f4940b;
 			}
 		}	
 	}
 	a{
 		font-family: roboto;
 	}
+}
+.header-fb{
+	grid-column: 14/15;
+	grid-row: 2/3;
+	position: relative;
+	div{
+		width: 58px;
+		height: 58px;
+		background: url('../img/fb.png');
+		position: absolute;
+		top:1.75em;
+		right: 1.4em;
+		opacity: 0.3;	
+		transition: opacity 0.3s linear;
+	}
+	div:hover{
+		opacity: 0.9;
+	};
 }
 .breadcrumbs{
 	font-family: roboto;
@@ -185,40 +207,49 @@ nav{
 // end burger-menu
 .index-title{
 	grid-column:1/15;
-	margin: 2em 0 0;
+	height: 6em;
 	text-align: center;
+	// background:grey;
 
 	h1{
+		margin-top:0.5em;
 		font-weight: 100;
 		font-size: 2.5em;
 		color: #000;
 	}
 }
 .event-container{
-	grid-column:4/12;
+	grid-column:2/14;
 	display:flex;
 	flex-wrap:wrap;
 	justify-content:space-evenly; 
 	font-family: roboto;
+
 }
 .event{
-	width: 300px;
-	margin:2em 0 0;	
+	width: 500px;
+	margin:4vh 0.75vw;	
+
 	.date{
-		margin: 0.75em 0;
+		margin: 0 0 0.75em 0;
 	}
 	h3{
-		margin: 0.75em 0;
-
+		margin: 0 0 0.75em 0;
 	}
-
+	transition: transform 0.3s linear;
 }
+.event:hover{
+	cursor: pointer;
+	transform:scale(1.01);
+
+};
+
 .event-title{
 	height: 4em;
 }
 .event-image-wrap{
-	width: 300px;
-	height: 170px;
+	width: 500px;
+	height: 280px;
 	position: relative;	
 
 }
@@ -230,22 +261,56 @@ nav{
 	left:0;
 }
 .event-shadow{
-	background:rgba(0,0,0,0.5);
+	text-align: center;
+	background:rgba(20,20,30,0.7);
+	h3{
+		color: #fff;
+		font-weight: 100;
+		font-size: 2em;
+		margin: 2em 1em;
+		transition: color 0.3s linear, background 0.3s linear;
+	}
+}
+.event-shadow:hover{
+	h3{
+		color:#f4940b;
+	}
+	background: rgba(20,20,30,0.8);
+	
 }
 
 .left-container{
+	margin-top: 10vh;
 	grid-column:1/4;
-	padding-left:1em;
+	padding-left:0.5em;
 
 	.left{
-		margin: 0  0 0 2em;
+		margin: 0  0 0 1em;
 		p{
-			margin: 2.5em 0;
+
 			font-size: 0.6	em;
 			line-height: 1.5em;	
 			letter-spacing: 0.075em;
 		}
 	}
+}
+.left-news-container{
+	margin: 0 0 1em 0;
+	.news-data{
+		margin: 0.5em 0;
+		p{
+			font-size: 0.8em;
+		}
+
+	}
+
+}
+.left-news-text{
+	p{
+		font-size: 0.8em;
+
+	}
+			
 }
 .news-image{
 	grid-column: 2/5;
@@ -352,6 +417,9 @@ footer{
 		color:#000;
 		font-family: roboto;
 	}
+	a{
+		text-decoration: none;
+	}
 }
 // .nav-footer-1{
 // 	grid-column:3/6;
@@ -359,28 +427,28 @@ footer{
 // .nav-footer-2{
 // 	grid-column:6/9;
 // }
-.nav-footer-1, .nav-footer-2{
-	ul{
-		margin-left:2em;
-		list-style-type: none;
-		li{
-			margin-bottom:0.5em;
+// .nav-footer-1, .nav-footer-2{
+// 	ul{
+// 		margin-left:2em;
+// 		list-style-type: none;
+// 		li{
+// 			margin-bottom:0.5em;
 			
-			a{
-				color:#000;
-				text-decoration: none;
-				font-size: 0.8em;
+// 			a{
+// 				color:#000;
+// 				text-decoration: none;
+// 				font-size: 0.8em;
 
-			}
-		}
-	}
-}
-.nav-footer-2{
-	ul{
-		margin-left:0;
-	}
+// 			}
+// 		}
+// 	}
+// }
+// .nav-footer-2{
+// 	ul{
+// 		margin-left:0;
+// 	}
 
-}
+// }
 .contacts{
 	grid-column: 11/14;
 
