--- a/source/css/style.scss
+++ b/source/css/style.scss
@@ -81,7 +81,7 @@ nav{
 			display: inline-block;
 			border-left: #555 1px solid;
 			padding:0.75em 0;
-			margin:0 -2px;
+			// margin:0 -2px;
 			transition: background 0.3s linear;
 			a{
 				padding: 0.25em 1em;
