--- a/source/css/news.scss
+++ b/source/css/news.scss
@@ -3,9 +3,10 @@
 }
 .ls1-cover{
 	background: url('../img/news-remont.jpg');
+	max-width: 450px;
 }
 .big-last-news{
-	grid-column: 4/8;
+	grid-column: 4/9;
 	a{
 		text-decoration: none;	
 	}
@@ -26,42 +27,80 @@
 				font-family: roboto;
 				font-weight: 100;
 				font-size: 2em;
+				transition: color 0.2s linear;
 			}
 			
 		}
+		div:hover{
+			h1{
+			color:#f4940b;
+			}
+		
+		}		
 	
 	}
 	
 }
 .small-last-news{
-	grid-column: 8/12;
-	
+	grid-column: 9/12;
+	a{
+		text-decoration:none;
+	}
+
 	.ls-2{
+
 		margin:0.5em 0;
 		height: 18vh;
-		background: rgba(10, 20, 90, 0.8);
+		background: rgba(10, 20, 30, 0.7);
 		color:#fff;
 		text-align: center;
 		div{
-			padding-top: 2em;
+			padding-top: 1em;
 			h2{				
 				color:#fff;
+				font-size: 1.2em;
 				font-family: roboto;
 				font-weight: 100;
+				transition: color 0.2s linear;
 			}
 			
+		}
+		div:hover{
+			h2{
+			color:#f4940b;
+			}
+		
 		}
 	}
 
 
 }
+.ls-2-1-cover{
+	background: url('../img/event-1.jpg');
+	background-size: cover; 
+}
+.ls-2-2-cover{
+	background: url('../img/event-5.jpg');
+	background-size: cover; 
+}
 .news-container{
-	grid-column: 4/12;
+	margin-top: 2em;
+	grid-column: 5/11;
 	img{
 		margin: 1em 0;
 	}
 }
 .news-text{
+	a{
+		text-decoration: none;
+		transition: color 0.2s linear;
+	}
+	a:visited{
+		color: #333;
+	}
+	a:hover{
+		color:#f4940b;
+	}
 	p, h2 {
 		font-family: roboto;
 	}
