--- a/www/css/style.css
+++ b/www/css/style.css
@@ -24,10 +24,11 @@
   margin: 2vh 0 1vh 0; }
 
 .ls1-cover {
-  background: url("../img/news-remont.jpg"); }
+  background: url("../img/news-remont.jpg");
+  max-width: 450px; }
 
 .big-last-news {
-  grid-column: 4/8; }
+  grid-column: 4/9; }
   .big-last-news a {
     text-decoration: none; }
   .big-last-news .ls-1 {
@@ -41,27 +42,58 @@
         color: #fff;
         font-family: roboto;
         font-weight: 100;
-        font-size: 2em; }
+        font-size: 2em;
+        -webkit-transition: color 0.2s linear;
+        transition: color 0.2s linear; }
+    .big-last-news .ls-1 div:hover h1 {
+      color: #f4940b; }
 
 .small-last-news {
-  grid-column: 8/12; }
+  grid-column: 9/12; }
+  .small-last-news a {
+    text-decoration: none; }
   .small-last-news .ls-2 {
     margin: 0.5em 0;
     height: 18vh;
-    background: rgba(10, 20, 90, 0.8);
+    background: rgba(10, 20, 30, 0.7);
     color: #fff;
     text-align: center; }
     .small-last-news .ls-2 div {
-      padding-top: 2em; }
+      padding-top: 1em; }
       .small-last-news .ls-2 div h2 {
         color: #fff;
+        font-size: 1.2em;
         font-family: roboto;
-        font-weight: 100; }
+        font-weight: 100;
+        -webkit-transition: color 0.2s linear;
+        transition: color 0.2s linear; }
+    .small-last-news .ls-2 div:hover h2 {
+      color: #f4940b; }
+
+.ls-2-1-cover {
+  background: url("../img/event-1.jpg");
+  background-size: cover; }
+
+.ls-2-2-cover {
+  background: url("../img/event-5.jpg");
+  background-size: cover; }
 
 .news-container {
-  grid-column: 4/12; }
+  margin-top: 2em;
+  grid-column: 5/11; }
   .news-container img {
     margin: 1em 0; }
+
+.news-text a {
+  text-decoration: none;
+  -webkit-transition: color 0.2s linear;
+  transition: color 0.2s linear; }
+
+.news-text a:visited {
+  color: #333; }
+
+.news-text a:hover {
+  color: #f4940b; }
 
 .news-text p, .news-text h2 {
   font-family: roboto; }
