--- a/source/css/poster.scss
+++ b/source/css/poster.scss
@@ -1,6 +1,48 @@
 section{
 	font-family: roboto;
 }
+
+.posters-wrap{
+	grid-column: 2/14;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+}
+.poster-container{
+	width:300px;
+	height:400px;
+	border: #000 1px solid;
+	border-radius: 1em;
+	margin:1.5em; 
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-start;
+	align-items: center;
+	div{
+		padding-top: 1em;
+		border-radius: 0.5em; 
+	}
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 .poster-title{
 	grid-column: 5/11;
 	margin-top: 2em;
