--- a/source/css/style.scss
+++ b/source/css/style.scss
@@ -66,9 +66,6 @@ header{
 #play-stop:hover{
 	cursor: pointer;
 }
-
-
-
 nav{
 		grid-column: 2/14;
 		grid-row: 2/3;
@@ -76,11 +73,8 @@ nav{
 		align-items:center;
 		justify-content:space-around;
 		background: rgba(0, 0, 0, 0.4);
-		// font-weight: 100;
-
-	justify-content:center;
+		justify-content:center;
 	ul{
-
 		li{
 			display: inline-block;
 			border-left: #555 1px solid;
@@ -93,15 +87,10 @@ nav{
 				font-size: 1.2em;
 				transition: color 0.3s linear;
 			}
-			a:hover{
-				
-				
-			}
 		}
 		li:nth-child(1){
 			border-left:none;
 		}
-
 		li:hover{
 			background:rgba(20,20,30,0.8);
 			a{
@@ -143,13 +132,13 @@ nav{
 		li{
 			margin: 0 0.5em;
 			a{
-				// text-decoration: none;
 				color:#333;
 				font-size: 0.8em;
 			}
 		}
 	}
 }
+
 // burger-menu
 .burg-menu{
 	grid-column: 11/12;
@@ -205,6 +194,37 @@ nav{
 	}
 }
 // end burger-menu
+.button-help{
+	grid-column:14/15;
+	position:fixed;
+	top:1.5vh;
+	left: 46.15vw;
+	// right: 1vw;
+	width: 6vw;
+	height: 6vw;
+	border-radius: 50%;
+	z-index:10;
+	background: rgba(220, 0, 0, 0.25);
+	transition: background 0.25s linear;
+	border: #fff 1px solid;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	p{
+		font-family: roboto;
+		color: #fff;
+		letter-spacing: 0.025em;
+		font-weight: 100;	
+		font-size: 0.9em; 
+	}	
+	
+}
+.button-help:hover{
+	background: rgba(10, 120, 80, 0.9);
+}
+
+		
+
 .index-title{
 	grid-column:1/15;
 	height: 6em;
