--- a/www/css/style.css
+++ b/www/css/style.css
@@ -152,6 +152,40 @@
 section {
   font-family: roboto; }
 
+.posters-wrap {
+  grid-column: 2/14;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center; }
+
+.poster-container {
+  width: 300px;
+  height: 400px;
+  border: #000 1px solid;
+  border-radius: 1em;
+  margin: 1.5em;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: start;
+  -ms-flex-pack: start;
+  justify-content: flex-start;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center; }
+  .poster-container div {
+    padding-top: 1em;
+    border-radius: 0.5em; }
+
 .poster-title {
   grid-column: 5/11;
   margin-top: 2em; }
@@ -437,6 +471,38 @@ nav {
       color: #ddd;
       text-align: center;
       padding: 1em 0; }
+
+.button-help {
+  grid-column: 14/15;
+  position: fixed;
+  top: 1.5vh;
+  left: 46.15vw;
+  width: 6vw;
+  height: 6vw;
+  border-radius: 50%;
+  z-index: 10;
+  background: rgba(220, 0, 0, 0.25);
+  -webkit-transition: background 0.25s linear;
+  transition: background 0.25s linear;
+  border: #fff 1px solid;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center; }
+  .button-help p {
+    font-family: roboto;
+    color: #fff;
+    letter-spacing: 0.025em;
+    font-weight: 100;
+    font-size: 0.9em; }
+
+.button-help:hover {
+  background: rgba(10, 120, 80, 0.9); }
 
 .index-title {
   grid-column: 1/15;
