--- a/source/css/news.scss
+++ b/source/css/news.scss
@@ -143,14 +143,21 @@
 		
 	}
 }
-.current-news-title, {
-	grid-column: 4/12;
-	display: flex;
+.current-news{
+	
 }
 .current-news-text{
 	grid-column: 4/12;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	h1{
+		margin: 0 3.5em;
+	}
+	// grid-column: 4/12;
 	p{
-		margin: 	1em;
+		margin: 	1em 2em;
+		line-height: 1.5em;
 	}
 		
 }
