--- a/www/css/style.css
+++ b/www/css/style.css
@@ -375,6 +375,10 @@ header {
   background: rgba(20, 20, 30, 0.2); }
 
 .radio {
+  margin: 1em 1em 0 0.5em;
+  background: url("../img/radio.jpg"); }
+
+.play-stop-cover {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -388,7 +392,14 @@ header {
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center;
-  margin: 1em 1em 0 0.5em; }
+  width: 72px;
+  height: 64px;
+  -webkit-transition: background 0.2s linear;
+  transition: background 0.2s linear; }
+
+.play-stop-cover:hover {
+  cursor: pointer;
+  background: rgba(0, 0, 0, 0.7); }
 
 #play-stop img {
   margin-top: 0.75em; }
