--- a/www/css/style.css
+++ b/www/css/style.css
@@ -24,7 +24,7 @@
   margin: 2vh 0 1vh 0; }
 
 .ls1-cover {
-  background: url("../img/news-remont.jpg");
+  background: url("../img/l-1.jpg");
   max-width: 450px; }
 
 .big-last-news {
