--- a/source/css/news.scss
+++ b/source/css/news.scss
@@ -1,33 +1,37 @@
 .last-news{
 	margin: 2vh 0 1vh 0;
 }
-.ls1-cover{
-	background: url('../img/l-1.jpg');
-	max-width: 450px;
-}
+// // .ls1-cover{
+// // 	// background: url('../img/l-1.jpg');
+// // 	max-width: 450px;
+// }
 .big-last-news{
 	grid-column: 4/9;
 	a{
 		text-decoration: none;	
 	}
 	.ls-1{
-		
-		background: rgba(10, 20, 50, 0.6);
-		
+		overflow:hidden;
+		position: relative;
 		height: calc(36vh + 0.5em);
 		margin:0.5em 0;
-
-		
 		text-align: center;
-			
+		.big-last-news-image, .big-last-news-shadow{
+			width: 100%;
+			height: 100%;
+			position:absolute;
+			top:0;
+			left:0;
+		}				
 		div{
-			padding-top: 3em;
+			// padding-top: 3em;
 			h1{
 				color:#fff;
 				font-family: roboto;
 				font-weight: 100;
 				font-size: 2em;
 				transition: color 0.2s linear;
+				margin:0.25em;
 			}
 			
 		}
@@ -48,20 +52,41 @@
 	}
 
 	.ls-2{
-
+		position:relative;
 		margin:0.5em 0;
 		height: 18vh;
-		background: rgba(10, 20, 30, 0.7);
+		// background: rgba(10, 20, 30, 0.7);
 		color:#fff;
 		text-align: center;
+		.small-last-news-image, .small-last-news-shadow{
+			width: 100%;
+			height: 100%;
+			position:absolute;
+			top:0;
+			left:0;
+			overflow: hidden;
+		}
+		.small-last-news-shadow{
+			// padding-top:1em;
+			text-align: center;
+			background:rgba(20,20,30,0.7);
+			h3{
+				color: #fff;
+				font-weight: 100;
+				font-size: 2em;
+				margin: 2em 1em;
+				transition: color 0.3s linear, background 0.3s linear;
+			}
+		}
 		div{
-			padding-top: 1em;
+			
 			h2{				
 				color:#fff;
 				font-size: 1.2em;
 				font-family: roboto;
 				font-weight: 100;
 				transition: color 0.2s linear;
+				margin: 0.5em 0.25em;
 			}
 			
 		}
@@ -76,10 +101,11 @@
 
 }
 .ls-2-1-cover{
-	background: url('../img/event-1.jpg');
-	background-size: cover; 
+	// background: url('../img/event-1.jpg');
+	position: relative;
 }
 .ls-2-2-cover{
+	position: relative;
 	background: url('../img/event-5.jpg');
 	background-size: cover; 
 }
