--- a/www/css/style.css
+++ b/www/css/style.css
@@ -23,28 +23,30 @@
 .last-news {
   margin: 2vh 0 1vh 0; }
 
-.ls1-cover {
-  background: url("../img/l-1.jpg");
-  max-width: 450px; }
-
 .big-last-news {
   grid-column: 4/9; }
   .big-last-news a {
     text-decoration: none; }
   .big-last-news .ls-1 {
-    background: rgba(10, 20, 50, 0.6);
+    overflow: hidden;
+    position: relative;
     height: calc(36vh + 0.5em);
     margin: 0.5em 0;
     text-align: center; }
-    .big-last-news .ls-1 div {
-      padding-top: 3em; }
-      .big-last-news .ls-1 div h1 {
-        color: #fff;
-        font-family: roboto;
-        font-weight: 100;
-        font-size: 2em;
-        -webkit-transition: color 0.2s linear;
-        transition: color 0.2s linear; }
+    .big-last-news .ls-1 .big-last-news-image, .big-last-news .ls-1 .big-last-news-shadow {
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      top: 0;
+      left: 0; }
+    .big-last-news .ls-1 div h1 {
+      color: #fff;
+      font-family: roboto;
+      font-weight: 100;
+      font-size: 2em;
+      -webkit-transition: color 0.2s linear;
+      transition: color 0.2s linear;
+      margin: 0.25em; }
     .big-last-news .ls-1 div:hover h1 {
       color: #f4940b; }
 
@@ -53,28 +55,44 @@
   .small-last-news a {
     text-decoration: none; }
   .small-last-news .ls-2 {
+    position: relative;
     margin: 0.5em 0;
     height: 18vh;
-    background: rgba(10, 20, 30, 0.7);
     color: #fff;
     text-align: center; }
-    .small-last-news .ls-2 div {
-      padding-top: 1em; }
-      .small-last-news .ls-2 div h2 {
+    .small-last-news .ls-2 .small-last-news-image, .small-last-news .ls-2 .small-last-news-shadow {
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      top: 0;
+      left: 0;
+      overflow: hidden; }
+    .small-last-news .ls-2 .small-last-news-shadow {
+      text-align: center;
+      background: rgba(20, 20, 30, 0.7); }
+      .small-last-news .ls-2 .small-last-news-shadow h3 {
         color: #fff;
-        font-size: 1.2em;
-        font-family: roboto;
         font-weight: 100;
-        -webkit-transition: color 0.2s linear;
-        transition: color 0.2s linear; }
+        font-size: 2em;
+        margin: 2em 1em;
+        -webkit-transition: color 0.3s linear, background 0.3s linear;
+        transition: color 0.3s linear, background 0.3s linear; }
+    .small-last-news .ls-2 div h2 {
+      color: #fff;
+      font-size: 1.2em;
+      font-family: roboto;
+      font-weight: 100;
+      -webkit-transition: color 0.2s linear;
+      transition: color 0.2s linear;
+      margin: 0.5em 0.25em; }
     .small-last-news .ls-2 div:hover h2 {
       color: #f4940b; }
 
 .ls-2-1-cover {
-  background: url("../img/event-1.jpg");
-  background-size: cover; }
+  position: relative; }
 
 .ls-2-2-cover {
+  position: relative;
   background: url("../img/event-5.jpg");
   background-size: cover; }
 
@@ -269,26 +287,6 @@ section {
   -webkit-transform: scale(1.005, 1.005);
   transform: scale(1.005, 1.005); }
 
-.miskrada {
-  background: url("../img/main.jpg");
-  background-size: cover;
-  height: 85vh;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center; }
-  .miskrada div a {
-    font-family: roboto;
-    font-weight: 100;
-    font-size: 5vh;
-    color: #fff;
-    margin: 1vh; }
-
 .fm {
   margin: 0; }
 
@@ -400,9 +398,6 @@ header {
 .play-stop-cover:hover {
   cursor: pointer;
   background: rgba(0, 0, 0, 0.7); }
-
-#play-stop img {
-  margin-top: 0.75em; }
 
 #play-stop:hover {
   cursor: pointer; }
@@ -613,7 +608,8 @@ nav {
   height: 100%;
   position: absolute;
   top: 0;
-  left: 0; }
+  left: 0;
+  overflow: hidden; }
 
 .event-shadow {
   text-align: center;
@@ -739,12 +735,17 @@ nav {
 
 footer {
   font-family: roboto;
-  background: #f6f6f6;
+  background: #333;
   padding: 2em 0;
   margin-top: 6vh; }
 
+.emblem-hust {
+  grid-column: 2/3; }
+
+.emblem-oblrada {
+  grid-column: 4/5; }
+
 .emblem-hust, .emblem-oblrada {
-  grid-column: 2/3;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -757,10 +758,16 @@ footer {
   .emblem-hust img, .emblem-oblrada img {
     margin: 0 1em; }
   .emblem-hust p, .emblem-oblrada p {
-    color: #000;
-    font-family: roboto; }
+    color: #aaa;
+    font-family: roboto;
+    font-size: 0.8em;
+    line-height: 1.25em;
+    -webkit-transition: color 0.2s linear;
+    transition: color 0.2s linear; }
   .emblem-hust a, .emblem-oblrada a {
     text-decoration: none; }
+  .emblem-hust div:hover p, .emblem-oblrada div:hover p {
+    color: #f4940b; }
 
 .contacts {
   grid-column: 11/14; }
@@ -774,4 +781,5 @@ footer {
     margin: 1em 0; }
     .contacts div span {
       margin: 0 1em;
-      font-size: 1.25em; }
+      font-size: 0.8em;
+      color: #aaa; }
